# compare-and-backtest-multiple-strategies

./: README.md  pyproject.toml
config/: parameters.yaml
notebooks/: for_submission.ipynb  test.ipynb  test_ads_rsi.ipynb  test_boillinger_reversal.ipynb  test_di.ipynb  test_donchian_channel.ipynb  test_lstm.ipynb  test_ml.ipynb  test_ml_hft.ipynb  test_sma.ipynb  test_stochastic_osc_n_macd.ipynb  test_supertrend.ipynb
src/: calculate_indicators.py  fetch_data.py  interface.py  monte_carlo.py  portfolio_stats.py  style.css  test_interface.py
src/backtests/: DC.py  LSTM.py  ML.py  SMA.py  SuperTrend.py
src/util/: descriptions.py  performance_calculations.py  st_column_config.py  utility_functions.py
