[tool.poetry]
name = "compare-multiple-backtests"
version = "0.1.0"
description = "comparing different backtesting strategies"
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
ipykernel = "^6.29.2"
ta = "^0.11.0"
yfinance = "^0.2.36"
mplfinance = "^0.12.10b0"
streamlit = "^1.31.1"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
docformatter = "^1.7.5"
pre-commit = "^3.6.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
plotly = "^5.19.0"
altair = "^5.2.0"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
streamlit-lottie = "^0.0.5"
streamlit-extras = "^0.4.0"
nbformat = "^5.9.2"
scipy = "^1.12.0"
deap = "^1.4.1"
ruptures = "^1.1.9"
pandas-ta = "^0.3.14b0"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
